# mi_peque-o_entorno

./: README.md
ods-zpl-parser/: main.py  requirements.txt
ods-zpl-parser/mapper/: classroom_assignment_problem_mapper.py  classroom_assignment_representatives_problem_mapper.py  integer_program_zimpl_mapper.py
ods-zpl-parser/resources/: courses_matrix.txt  (+4 more)
porta-1.4.1/: CMakeLists.txt  INFO  README.md
porta-1.4.1/examples/: 2_gateways_2_canales_1_sensor.poi  2_gateways_2_canales_1_sensor.poi.ieq  3_gateways_2_canales_3_sensor.ieq  3_gateways_2_canales_3_sensor.poi  3_gateways_2_canales_3_sensor.poi.ieq  3_gateways_2_canales_3_sensor.poi.ieq%  3_gateways_2_canales_3_sensor_faceta.ieq  3_gateways_2_canales_3_sensor_faceta.poi%  3_gateways_2_canales_3_sensor_faceta.poi.ieq  3_gateways_3_canales_3_sensor.ieq  3_gateways_3_canales_3_sensor.poi  3_gateways_3_canales_3_sensor.poi.ieq  3_gateways_3_canales_3_sensor_con_anotacion.ieq  ahorano.ieq  ahorano.poi  ahorano.poi.ieq  caso_feo.ieq  caso_feo.poi  caso_feo.poi.ieq  example.ieq  example.poi  example_2.ieq  example_2.poi  example_2.poi.ieq%  example_5.poi  example_5.poi.ieq  example_5_cursos_2.ieq  modelo_1_casao_chico.ieq  modelo_1_casao_chico.poi  modelo_1_casao_chico.poi.ieq  otro_mas.ieq  otro_mas.poi  otro_mas.poi.ieq  tres.ieq  tres.poi  tres.poi.ieq
porta-1.4.1/gnu-make/: Makefile  common.d  four_mot.d  inout.d  largecalc.d  mp.d  porta.d  portsort.d  valid.d
porta-1.4.1/src/: common.c  common.h  inout.c.old  porta.c  porta.c.old  porta.h  valid.c  valid.c.old
scipoptsuite-8.0.1/: Makefile  scip.dockerfile
(+83 files in other folders)
